[package]
name = "solana-streamer-sdk"
version = "1.2.2"
edition = "2021"
authors = ["William <byteblock6@gmail.com>", "sgxiang <sgxiang@gmail.com>", "wei <1415121722@qq.com>"]
repository = "https://github.com/0xfnzero/solana-streamer"
description = "A lightweight Rust library for real-time event streaming from Solana DEX trading programs. Supports PumpFun, PumpSwap, Bonk, and Raydium protocols with Yellowstone gRPC and ShredStream."
license = "MIT"
keywords = ["solana", "streaming", "events", "grpc", "shredstream"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "3.0.0"
solana-client = "3.1.9"
solana-program = "3.0.0" 
solana-transaction-status = "3.1.9"
solana-account-decoder = "3.1.9"
solana-entry = { version = "3.1.9", features = ["agave-unstable-api"] }
borsh = { version = "1.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
futures = "0.3.32"
bincode = "1.3"
anyhow = "1.0.102"
yellowstone-grpc-client = {  version = "10.2.0" }
yellowstone-grpc-proto = {  version = "10.1.1" }
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"]}
tonic = { version = "0.14.5", features = ["transport"] }
rustls = { version = "0.23.36", features = ["ring"], default-features = false }
log = "0.4.29"
chrono = "0.4.43"
lazy_static = "1.5.0"
once_cell = "1.21.3"
dashmap = "6.1.0"
prost = "0.14.3"
prost-types = "0.14.3"
maplit = "1.0.2"
env_logger = "0.11.9"
crossbeam-queue = "0.3.12"
parking_lot = "0.12.5"
wide = "1.1.1"
spl-token = { version = "9.0.0", default-features = false, features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0.0", default-features = false, features = ["no-entrypoint"] }
solana-commitment-config = { version = "3.1.1", features = ["serde"] }
tonic-prost = "0.14.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
